0.6.0 - currently working on
- [#2641] Change: tx_oelib_db::tableHasColumn can improve its caching
- [#2632] Feature: Add a function oelib_db::existsTable
- [#2627] Feature: Add a parameter $recordData to createAndLoginFrontEndUser
- [#2629] Cleanup: Remove XCLASS stuff from all classes in tests/ and tests/fixtures/
- [#2459] Feature: Add getAsModel to the model class
- [#2654] Feature: Add Model::existsKey()
- [#2652] Change: Enable query logging in the DB query wrappers
- [#2645] Feature: Add a status "dead" for models that could not be found in the DB
- [#2481] Feature: Add a function DataMapper::existsModelWithUid
- [#2642] Fix: Login fails with TYPO3 4.2.5
- [#2451] Fix: Undefined variable in createRelationAndUpdateCounter
- [#2554] Feature: Create new Mail class that represents one e-mail
- [#2311] Change: Move most of countRecords from the testing framework to oelib_db
- [#2503] Feature: Add DB result and DB query exceptions and wrappers for executing queries
- [#2542] Change: Remove the Autoloader includes from all oelib non-test classes except for the templatehelper
- [#2494] Change: The autoloader should include the constants
- [#2456] Feature: Add lazy loading for models

0.5.1 - released 2009-01-02
- [#2502] Change: Update copyrights to 2009
- [#2468] Change: Clean up and speed up the HTML template parsing
- [#768] Change: Use real visibility keywords (public/protected/private)
- [#2085] Fix: configcheck::checkIfPositiveIntegerValue: unused parameter $sheet
- [#2100] Feature: Add class tx_oelib_Exception_AccessDenied

0.5.0 - released 2008-12-21
- [#2435] Change: Allow having non-identical template objects for the same template file
- [#2321] Feature: The FE user data mapper should be able to get and use the currently logged-in FE user
- [#2322] Feature: Create an autoloader for models and other classes
- [#2417] Feature: CreateFrontEndUser should automatically create a group if needed