@@ -1,4 +1,5 @@
 0.6.0 - currently working on
+- [#788] Fix: Use t3lib_div::trimExplode instead of explode
 - [#2641] Change: tx_oelib_db::tableHasColumn can improve its caching
 - [#2632] Feature: Add a function oelib_db::existsTable
 - [#2627] Feature: Add a parameter $recordData to createAndLoginFrontEndUser
